--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -1,7 +1,7 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ตรวจสอบภายใน</h2>
-
+    
     <div class="ui top attached header">
       <span>แบบสอบทานระบบการควบคุมภายใน</span>
     </div>
