--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -29,7 +29,6 @@
     <thead>
 
       <tr>
-        <th rowspan="2" style="text-align: center !important;"><input id="checkAllSap" type="checkbox" (click)="clickCheckAll($event)" /></th>
         <th rowspan="2" style="text-align: center !important;">ลำดับที่</th>
         <th rowspan="2" style="text-align: center !important;">ชื่อ</th>
         <th rowspan="2" style="text-align: center !important;">ตำแหน่ง</th>
@@ -51,7 +50,7 @@
     </thead>
     <tfoot>
       <tr>
-        <th rowspan="1" colspan="5" style="text-align: center !important;"> รวม </th>
+        <th rowspan="1" colspan="4" style="text-align: center !important;"> รวม </th>
         <th rowspan="1" style="text-align: right !important;">{{totalFeedMoney}}</th>
         <th rowspan="1" style="text-align: center !important;"></th>
         <th rowspan="1" style="text-align: right !important;">{{totalRoostMoney}}</th>
@@ -77,7 +76,6 @@
 
   <div class="ui form center aligned grid">
       <button class="ui  grey button" type="button" (click)="clickBack()">กลับ</button>
-      <button class="ui  red button" type="button" >ลบรายการที่เลือก</button>
       <button class="ui  primary button" type="button" (click)="save()">บันทึก</button>
   </div> 
 <br><br>
@@ -92,7 +90,8 @@
   </div>
 
   <div class="scrolling content">
-    <div class="ui form center aligned" id="int09-1" ngNativeValidate>
+  <form id="addModal-form" ngNativeValidate >
+    <div class="ui form center aligned">
 
       <input type="hidden" id="id">
       <input type="hidden" id="idProcess">
@@ -123,7 +122,7 @@
           <label>ประเภท</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="type" name="type" (change)="gradeDropdown($event)">
+          <select class="ui dropdown" id="type" name="type" (change)="gradeDropdown($event)" style="width: 100%">
             <option value="">เลือก</option>
             <option *ngFor="let data of typeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
@@ -132,7 +131,7 @@
           <label>ระดับ</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="grade" name="grade">
+          <select class="ui dropdown" id="grade" name="grade" style="width: 100%">
             <option value="">เลือก</option>
             <option *ngFor="let data of gradeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
@@ -166,7 +165,7 @@
         <div class="three wide field ui right aligned">
           <label>เดินทางจาก</label>
         </div>
-        <div class="three wide field ui right aligned">
+        <div class="three wide field ui right aligned" style="width: 100%">
           <select class="ui dropdown" id="departure">
             <option value="">เลือก</option>
             <option *ngFor="let data of departureList" value="{{data.lovId}}">{{data.typeDescription}}</option>
@@ -185,7 +184,7 @@
             </div>
           </div>
         </div>
-        <div class="two wide field ui right aligned">
+        <div class="two wide field ui right aligned" >
           <label>วัน เวลา กลับถึง</label>
         </div>
         <div class="three wide field">
@@ -202,16 +201,16 @@
           <label>กรณีค่าเบี้ยเลี้ยง</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="allowance">
+          <select class="ui dropdown" id="allowance" style="width: 100%" (change)="ngIfallowance($event)">
             <option value="">เลือก</option>
             <option *ngFor="let data of allowanceList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
         </div>
-        <div class="two wide field ui right aligned">
+        <div class="two wide field ui right aligned" *ngIf=" ifallowance =='1184' && ifallowance !='' ">
           <label>กรณีฝึกอบรม</label>
         </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="training">
+        <div class="three wide field" *ngIf=" ifallowance =='1184' && ifallowance !=''">
+          <select class="ui dropdown" id="training" style="width: 100%">
             <option value="">เลือก</option>
             <option *ngFor="let data of trainingList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
@@ -222,25 +221,25 @@
           <label>กรณีที่พัก</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="roost">
+          <select class="ui dropdown" id="roost" style="width: 100%" (change)="ngIfroost($event)">
             <option value="">เลือก</option>
             <option *ngFor="let data of roostList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
         </div>
-        <div class="two wide field right aligned">
+        <div class="two wide field right aligned"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
           <label>ประเภทการฝึกอบรม</label>
         </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="trainingType" >
+        <div class="three wide field"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
+          <select class="ui dropdown" id="trainingType" style="width: 100%" >
             <option value="">เลือก</option>
             <option *ngFor="let data of trainingTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
         </div>
-        <div class="two wide field right aligned">
+        <div class="two wide field right aligned"  *ngIf=" ifroost !='1187' && ifroost !='' ">
           <label>ประเภทห้อง</label>
         </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="roomType" >
+        <div class="three wide field"  *ngIf=" ifroost !='1187'  && ifroost !='' ">
+          <select class="ui dropdown" id="roomType" style="width: 100%" >
             <option value="">เลือก</option>
             <option *ngFor="let data of roomTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
           </select>
@@ -251,7 +250,7 @@
         <div class="three wide field ui right aligned">
           <label>จำนวนวันเข้าพัก</label>
         </div>
-        <div class="three wide field">
+        <div class="three wide field" >
           <input id="numberDate" type="number" [attr.step]="1" required>
         </div>
       </div>
@@ -283,11 +282,13 @@
       </div>
       <br>
     </div>
+    </form>
   </div>
 
   <div class="actions">
     <div class="ui red deny button">ยกเลิก</div>
-    <div class="ui green button" (click)="saveData()">บันทึก</div>
+    <div class="ui primary button" *ngIf=" btnModal==='E' " (click)="EditData()">ดำเนินการแก้ไข</div>
+    <div class="ui green button"  *ngIf=" btnModal==='S' " (click)="saveData()">บันทึก</div>
   </div>
 </div>
 <!--End add modal -->
