--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
@@ -28,9 +28,6 @@
     <thead>
 
       <tr>
-        <th rowspan="2" style="text-align: center !important;">
-          <input id="checkAllSap" type="checkbox" (click)="clickCheckAll($event)" />
-        </th>
         <th rowspan="2" style="text-align: center !important;">ลำดับที่</th>
         <th rowspan="2" style="text-align: center !important;">ชื่อ</th>
         <th rowspan="2" style="text-align: center !important;">ตำแหน่ง</th>
@@ -48,14 +45,13 @@
 
     </thead>
     <tfoot>
-
       <tr>
-        <th rowspan="1" colspan="4" style="text-align: center !important;"> รวม </th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 816,000 </th>
+        <th rowspan="1" colspan="3" style="text-align: center !important;"> รวม </th>
+        <th rowspan="1" style="text-align: right !important;">{{totalFeedMoney}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalRoostMoney}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalPassage}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalOtherExpenses}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalTotalMoney}}</th>
         <th colspan="2" style="text-align: center !important;"></th>
       </tr>
 
@@ -63,7 +59,6 @@
   </table>
   <div class="ui form center aligned grid">
       <button class="ui  grey button" type="button" (click)="clickBack()">กลับ</button>
-      <button class="ui  red button" type="button" >ลบรายการที่เลือก</button>
       <button class="ui  primary button" type="button" (click)="save()">บันทึก</button>
   </div> 
 <br><br>
@@ -71,219 +66,213 @@
 
 <!-- add modal -->
 <div class="ui large modal transition hidden" id='modalAdd'>
-  <div class="header" style="text-align: center !important;">
-    ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
-  </div>
-
-  <div class="scrolling content">
-    <div class="ui form center aligned" id="int09-1" ngNativeValidate>
-
-      <input type="hidden" id="id">
-      <input type="hidden" id="idProcess">
-      <input type="hidden" id="name">
-
-
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>ชื่อ</label>
+    <div class="header" style="text-align: center !important;">
+      ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
+    </div>
+  
+    <div class="scrolling content">
+    <form id="addModal-form" ngNativeValidate >
+      <div class="ui form center aligned">
+  
+        <input type="hidden" id="id">
+        <input type="hidden" id="idProcess">
+  
+  
+        <div class="inline fields">
+          <div class="three wide field right aligned">
+            <label>ชื่อ</label>
+          </div>
+          <div class="three wide field">
+            <input id="name" type="text">
+          </div>
+          <div class="two wide field right aligned">
+            <label>นามสกุล</label>
+          </div>
+          <div class="three wide field">
+            <input id="lastName" type="text">
+          </div>
         </div>
-        <div class="three wide field">
-          <input id="nameForm" type="text">
+        <div class="inline fields">
+          <div class="three wide field right aligned">
+            <label>ตำแหน่ง</label>
+          </div>
+          <div class="three wide field">
+            <input id="position" type="text">
+          </div>
+          <div class="two wide field right aligned">
+            <label>ประเภท</label>
+          </div>
+          <div class="three wide field">
+            <select class="ui dropdown" id="type" name="type" (change)="gradeDropdown($event)" style="width: 100%">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of typeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
+          <div class="two wide field right aligned">
+            <label>ระดับ</label>
+          </div>
+          <div class="three wide field">
+            <select class="ui dropdown" id="grade" name="grade" style="width: 100%">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of gradeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
         </div>
-        <div class="two wide field right aligned">
-          <label>นามสกุล</label>
-        </div>
-        <div class="three wide field">
-          <input id="lastForm" type="text">
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>ตำแหน่ง</label>
-        </div>
-        <div class="three wide field">
-          <input type="text" id="rank">
-        </div>
-        <div class="two wide field right aligned">
-          <label>ประเภท</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="type" name="type" (change)="typeDropdownOnChange($evnet)">
-            <option value="">เลือกประเภท</option>
-            <option *ngFor="let data of typeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-        <div class="one wide field right aligned">
-          <label>ระดับ</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="grade" name="grade">
-            <option value="">เลือกระดับ</option>
-            <option *ngFor="let data of gradeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field ui right aligned">
-          <label>วันขออนุญาต</label>
-        </div>
-        <div class="three wide field">
-          <div class="ui calendar" id="dateOfApplication" style="width: 100%">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>วันขออนุญาต</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate3" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              </div>
+            </div>
+          </div>
+          <div class="two wide field ui right aligned">
+            <label>วันเขียนเบิก</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate4" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="writeDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              </div>
             </div>
           </div>
         </div>
-        <div class="two wide field ui right aligned">
-          <label>วันเขียนเบิก</label>
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>เดินทางจาก</label>
+          </div>
+          <div class="three wide field ui right aligned" style="width: 100%">
+            <select class="ui dropdown" id="departure">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of departureList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
         </div>
-        <div class="three wide field">
-          <div class="ui calendar" id="dateOfWithdrawal" style="width: 100%">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>วัน เวลา ออกเดินทาง</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate5" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              </div>
+            </div>
+          </div>
+          <div class="two wide field ui right aligned" >
+            <label>วัน เวลา กลับถึง</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate6" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="returnDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field ui right aligned">
-          <label>เดินทางจาก</label>
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>กรณีค่าเบี้ยเลี้ยง</label>
+          </div>
+          <div class="three wide field">
+            <select class="ui dropdown" id="allowance" style="width: 100%" (change)="ngIfallowance($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of allowanceList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
+          <div class="two wide field ui right aligned" *ngIf=" ifallowance =='1184' && ifallowance !='' ">
+            <label>กรณีฝึกอบรม</label>
+          </div>
+          <div class="three wide field" *ngIf=" ifallowance =='1184' && ifallowance !=''">
+            <select class="ui dropdown" id="training" style="width: 100%">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of trainingList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
         </div>
-        <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="travelFrom" name="travelFrom">
-            <option value="">เลือก</option>
-            <option value="1">บ้าน - สนง.</option>
-            <option value="2">สนง. - สนง.</option>
-            <option value="3">สนง. - บ้าน</option>
-          </select>
+        <div class="inline fields">
+          <div class="three wide field right aligned">
+            <label>กรณีที่พัก</label>
+          </div>
+          <div class="three wide field">
+            <select class="ui dropdown" id="roost" style="width: 100%" (change)="ngIfroost($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of roostList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
+          <div class="two wide field right aligned"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
+            <label>ประเภทการฝึกอบรม</label>
+          </div>
+          <div class="three wide field"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
+            <select class="ui dropdown" id="trainingType" style="width: 100%" >
+              <option value="">เลือก</option>
+              <option *ngFor="let data of trainingTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
+          <div class="two wide field right aligned"  *ngIf=" ifroost !='1187' && ifroost !='' ">
+            <label>ประเภทห้อง</label>
+          </div>
+          <div class="three wide field"  *ngIf=" ifroost !='1187'  && ifroost !='' ">
+            <select class="ui dropdown" id="roomType" style="width: 100%" >
+              <option value="">เลือก</option>
+              <option *ngFor="let data of roomTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
+            </select>
+          </div>
+  
         </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field ui right aligned">
-          <label>วัน เวลา ออกเดินทาง</label>
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>จำนวนวันเข้าพัก</label>
+          </div>
+          <div class="three wide field" >
+            <input id="numberDate" type="number" [attr.step]="1" required>
+          </div>
         </div>
-        <div class="three wide field">
-          <div class="ui calendar" id="departureDate" style="width: 100%">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+        <div class="inline fields">
+          <div class="three wide field right aligned">
+            <label>ค่าพาหนะ</label>
+          </div>
+          <div class="three wide field">
+            <input id="passage" type="number" [attr.step]="1" required>
+          </div>
+  
+          <div class="two wide field right aligned">
+            <label>ค่าใช้จ่ายอื่น</label>
+          </div>
+          <div class="three wide field">
+            <input id="otherExpenses" type="number" [attr.step]="1" required>
+          </div>
+        </div>
+        <div class="ui grid">
+          <div class="three wide column">
+            <label><b>หมายเหตุ</b></label>
+          </div>
+          <div class="ten wide column">
+            <div class="ui form " style="width: 100%">
+              <textarea id="remarkT"></textarea>
             </div>
           </div>
+          <div class="three wide field"></div>
         </div>
-        <div class="two wide field ui right aligned">
-          <label>วัน เวลา กลับถึง</label>
-        </div>
-        <div class="three wide field">
-          <div class="ui calendar" id="returnDate" style="width: 100%">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
-            </div>
-          </div>
-        </div>
+        <br>
       </div>
-      <div class="inline fields">
-        <div class="three wide field ui right aligned">
-          <label>กรณีฝึกอบรม</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="trainingCase" name="trainingCase">
-            <option value="">เลือกกรณีฝึกอบรม</option>
-            <option *ngFor="let data of trainingCaseDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>ประเภทการเบิก</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="withdrawType" name="withdrawType" (change)="trainingRoomTypeDropdownList($evnet)">
-            <option value="">เลือกประเภทการเบิก</option>
-            <option *ngFor="let data of withdrawTypeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-        <div class="two wide field right aligned">
-          <label>ประเภทห้องอบรม</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="trainingRoomType" name="trainingRoomType">
-            <option value="">เลือกประเภทห้องอบรม</option>
-            <option *ngFor="let data of trainingRoomTypeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-
-      </div>
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>กรณีที่พัก</label>
-        </div>
-        <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="accommodationCase" name="accommodationCase">
-            <option value="">เลือกกรณีที่พัก</option>
-            <option value="1">ปกติ</option>
-            <option value="2">เหมาจ่าย </option>
-          </select>
-        </div>
-        <div class="two wide field right aligned">
-          <label>ประเภทที่พัก</label>
-        </div>
-        <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="roomType" name="roomType">
-            <option value="">เลือกประที่พัก</option>
-            <option value="1">ห้องเดี่ยว</option>
-            <option value="2">ห้องคู่</option>
-          </select>
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field ui right aligned">
-          <label>จำนวนวันเข้าพัก</label>
-        </div>
-        <div class="three wide field">
-          <input id="numberOfDate" type="number" [attr.step]="1" required>
-        </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>ค่าพาหนะ</label>
-        </div>
-        <div class="three wide field">
-          <input type="number" id="travelExpense" [attr.step]="1" required>
-        </div>
-
-        <div class="two wide field right aligned">
-          <label>ค่าใช้จ่ายอื่น</label>
-        </div>
-        <div class="three wide field">
-          <input type="number" id="otherExpenses" [attr.step]="1" required>
-        </div>
-      </div>
-      <div class="ui grid">
-        <div class="three wide column">
-          <label>
-            <b>หมายเหตุ</b>
-          </label>
-        </div>
-        <div class="ten wide column">
-          <div class="ui form " style="width: 100%">
-            <textarea id="remark"></textarea>
-          </div>
-        </div>
-        <div class="three wide field"></div>
-      </div>
-      <br>
+      </form>
+    </div>
+  
+    <div class="actions">
+      <div class="ui red deny button">ยกเลิก</div>
+      <div class="ui primary button" *ngIf=" btnModal==='E' " (click)="EditData()">ดำเนินการแก้ไข</div>
+      <div class="ui green button"  *ngIf=" btnModal==='S' " (click)="saveData()">บันทึก</div>
     </div>
   </div>
-
-  <div class="actions">
-    <div class="ui red deny button">ยกเลิก</div>
-    <div class="ui green button" (click)="save()">บันทึก</div>
-  </div>
-</div>
-<!--End add modal -->
+  <!--End add modal -->
 
 <!-- add Haed modal -->
 <div class="ui large modal  transition hidden" id='modalAddHead'>
