--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -287,8 +287,8 @@
 
   <div class="actions">
     <div class="ui red deny button">ยกเลิก</div>
-    <div class="ui primary button" *ngIf=" btnModal==='E' " (click)="EditData()">ดำเนินการแก้ไข</div>
-    <div class="ui green button"  *ngIf=" btnModal==='S' " (click)="saveData()">บันทึก</div>
+    <div class="ui primary button" *ngIf=" btnModal=='E' " (click)="EditData()">ดำเนินการแก้ไข</div>
+    <div class="ui green button"  *ngIf=" btnModal=='S' " (click)="saveData()">บันทึก</div>
   </div>
 </div>
 <!--End add modal -->
